packages/button/src/scss/_component.scss
@use "@uqds/core/src/scss/global" as core;
@use "global" as *;

/* button Default */
.uq-button {
  background-color: core.$utility-500;
  border: 2px solid core.$utility-500;
  border-radius: core.$space-xs;
  box-sizing: border-box;
  color: core.$white;
  cursor: pointer;
  display: inline-block;
  font-family: core.$roboto;
  font-size: core.$font-size-m;
  font-weight: normal;
  line-height: normal;
  padding: core.$space-s core.$space-l;
  position: relative;
  text-align: center;
  text-decoration: none;
  transition: all 300ms ease-out;

  *,
  *::before,
  *::after {
    box-sizing: border-box;
  }

  &:hover,
  &:focus {
    background-color: core.$utility-600;
    border-color: core.$utility-600;
    color: core.$white;
    text-decoration: underline;
  }

  &.uq-button--outline {
    background-color: transparent;
    border-color: core.$utility-500;
    color: core.$utility-500;

    &:hover,
    &:focus {
      background-color: core.$utility-600;
      border-color: core.$utility-600;
      color: core.$white;
    }
  }

  &.uq-button--text {
    background-color: transparent;
    border-color: transparent;
    color: core.$utility-500;

    &:hover,
    &:focus {
      background-color: transparent;
      border-color: transparent;
      color: core.$utility-600;
    }
  }

  /* button secondary */
  &--secondary {
    background-color: core.$grey-300;
    border-color: core.$grey-300;
    color: core.$grey-900;

    &:hover,
    &:focus {
      background-color: core.$grey-300;
      border-color: core.$grey-300;
      color: core.$grey-900;
    }

    &.uq-button--outline {
      background-color: transparent;
      border-color: core.$grey-300;
      color: core.$grey-900;

      &:hover,
      &:focus {
        background-color: core.$grey-500;
        border-color: core.$grey-500;
        color: core.$grey-900;
      }

      &.uq-button--light {
        color: core.$grey-500;
        border-color: core.$grey-500;

        &:hover,
        &:focus {
          color: core.$grey-900;
        }
      }
    }

    &.uq-button--text {
      background-color: transparent;
      border-color: transparent;
      color: core.$grey-900;

      &:hover,
      &:focus {
        background-color: transparent;
        border-color: transparent;
        color: core.$grey-900;
      }

      &.uq-button--light {
        color: core.$grey-500;

        &:hover,
        &:focus {
          color: core.$grey-500;
        }
      }
    }
  }

  /* button purple */
  &--purple {
    background-color: core.$purple-500;
    border-color: core.$purple-500;
    color: core.$white;

    &:hover,
    &:focus {
      background-color: core.$purple-600;
      border-color: core.$purple-600;
      color: core.$white;
    }

    &.uq-button--outline {
      background-color: transparent;
      border-color: core.$purple-500;
      color: core.$purple-500;

      &:hover,
      &:focus {
        background-color: core.$purple-600;
        border-color: core.$purple-600;
        color: core.$white;
      }

      &.uq-button--light {
        color: core.$purple-500;

        &:hover,
        &:focus {
          color: core.$white;
        }
      }
    }

    &.uq-button--text {
      background-color: transparent;
      border-color: transparent;
      color: core.$purple-500;

      &:hover,
      &:focus {
        background-color: transparent;
        border-color: transparent;
        color: core.$purple-600;
      }

      &.uq-button--light {
        color: core.$purple-500;

        &:hover,
        &:focus {
          color: core.$purple-600;
        }
      }
    }
  }

  /* button sizes */
  &--tiny {
    font-size: core.$font-size-xs;
    padding: core.$space-xs core.$space-s;
  }

  &--small {
    font-size: core.$font-size-s;
    padding: core.$space-s core.$space-m;
  }

  &--large {
    font-size: core.$font-size-l;
    padding: core.$space-m core.$space-xxl;
  }

  &--expand {
    padding-left: core.$space-none;
    padding-right: core.$space-none;
    width: 100%;
  }
}

